src/objects/c2g__WorkerLogGroup__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpworkerloggroup</customHelpPage>
    <fields>
        <fullName>c2g__NotificationType__c</fullName>
        <formula>IF(AND(c2g__TotalNumberOfErrors__c=0,c2g__TotalNumberOfAborts__c=0,c2g__TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(c2g__TotalNumberOfErrors__c = c2g__TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(c2g__TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( c2g__TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>c2g__WorkerLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__WorkerLog__c.c2g__IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__WorkerLog__c.c2g__WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>c2g__WorkerLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__WorkerLog__c.c2g__IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__WorkerLog__c.c2g__WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>c2g__WorkerLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__WorkerLog__c.c2g__IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__WorkerLog__c.c2g__WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>c2g__WorkerLog__c.c2g__WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkerLogGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Worker__c</fullName>
        <label>Worker</label>
        <referenceTo>c2g__Worker__c</referenceTo>
        <relationshipLabel>Worker Log Groups</relationshipLabel>
        <relationshipName>WorkerLogGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Worker Log Group</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Worker Log Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Log Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>